# poetry-plugin-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-example.yaml  .pre-commit-hooks.yaml  README.md  cleo.html  index.html  poetry.html  poetry_plugin_hook.html  pre-commit-hooks.yaml  pyproject.toml  tox.ini  warnings.json
.github/workflows/: publish.yml  pytest.yml  testbuild.yml
cleo/: _compat.html  _utils.html  application.html  color.html  commands.html  cursor.html  descriptors.html  events.html  exceptions.html  formatters.html  helpers.html  io.html  loaders.html  terminal.html  testers.html  ui.html
cleo/commands/: base_command.html  command.html  completions.html  completions_command.html  help_command.html  list_command.html
cleo/descriptors/: application_description.html  descriptor.html  text_descriptor.html
docs/: README.md.jinja2  __init__.py  __main__.py  documentation.py  readme.py
poetry/: __version__.html  config.html  console.html  core.html  exceptions.html  factory.html  inspection.html  installation.html  json.html  layouts.html  locations.html  masonry.html  mixology.html  packages.html  plugins.html  poetry.html  publishing.html  puzzle.html  pyproject.html  repositories.html  toml.html  utils.html  vcs.html  version.html
poetry_plugin_hook/: __init__.py  bump.py  latest.py  redirect.html  sync.py
poetry_plugin_latest/: __init__.py  latest.py  redirect.py  sync.py  wrapper.py
tests/: __init__.py  conftest.py  mock_hooks.json  test_bump.py  test_hook.py  test_latest.py  test_poetry.py  test_redirect.py  test_setup.py  test_sync.py
(+199 files in other folders)
